--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "datasets>=3.6.0",
+    "peft>=0.16.0",
     "torch>=2.7.1",
     "transformers>=4.53.0",
 ]
